LIST OF CHANGES FOR NPG-QC PACKAGE

release 56.9
 - database name-agnostic database dump file

release 56.8
 - increase DB field sizes for genotype qc check results

release 56.7
 - only insert cluster densities which exist

release 56.6
 - use length of index read from tag0 bam file rather than length of tag in
     decode metrics file to derive barcode file, added new tests and test data
 - do not croak if a Bustard_Summary file does not exist (as is the case
     for HX instruments)
 - made interop parsing code more generic

release 56.5
 - phix bam_flagstat to have default serialisation name including phix

release 56.4 
 - get cluster densities from InterOp/TileMetricsOut.bin
 - added test data for tracking database

release 56.3 
 - added check for alignments, reference and library_type to can_run() 

release 56.2
 - relax regexp for class name in result role to allow git or svn version numbering

release 56.1
 - git-based module and script versions
 - RSC keywords removed

release 56.0
 - use test data that are publicly available
 - getting autoqc module versions made to work with non-numeric versions
 - redundant Gerald summary loader code removed
 - unused test data removed
 - in test runfolders that are used GERALD directories renamed to PB_cal
     since gerald_path is going to be removed from npg_tracking::illumina::run::folder

release 55.10
 - remove default for verify_bam_id.pass

release 55.9
 - minor bug fix for verify_bam_id

release 55.8
 - remove Fey modules from npg_qc::autoqc::db namespace, t/60-autoqc-db*.t tests 
   and test data not used elsewhere
 - qc_db_delete_autoqc script:
     updated help message
     fix for a bug that resulted in no data deleted unless a list of checks to
       delete was given explicitly 

release 55.7
 - tag sniff usage message
 - minor code changes to a couple of checks
 - test/test data for verify_bam_id
 - preserve case when generating DBIx binding since verify_bam_id
   has mixed case column names
